siosifm_dev_win32/examples/common/siosifmdll.h

typedef int int32;
typedef unsigned int uint32;
typedef int int32;
typedef unsigned int uint32;
typedef int int32;
typedef unsigned int uint32;
/* Initializes the library

*/
DLLFUNC int32 IfmInit();
/* Closes the library and gives free all resources
   Counterpart to IfmInit
*/
DLLFUNC void IfmClose();
/* Open a device
   returns a handle for the device, the "devNumber"
*/
DLLFUNC int32 IfmOpenUSB(int32 uniqueId);
/* Close a device which was opened with one of the IfmOpenXXX functions
*/
DLLFUNC void IfmCloseDevice(int32 devNumber);
/*
    The function IfmSearchUSBDevices finds the count of the devices on the USB-bus
    after a reset. This devices can be shown with the function IfmUSBDeviceSerial
*/
DLLFUNC int32 IfmSearchUSBDevices();
/*
  The function IfmUSBDeviceSerial returns the
 USB-serial number of the requested device; 0<=uniqueId<IfmUSBDeviceCount()
*/
DLLFUNC int32 IfmUSBDeviceSerial(int32 uniqueId);
// checks, if the devNumber is a valid device id
DLLFUNC int32 IfmDeviceValid(int32 devNumber);
/*
Sets the "dead path" in mm for the environment correction.
The dead path is the distance from the sensor head to the zero position.
Because during this distance the laser beam is also influenced by changing in air refraction
it must be considered with the envirnonment correction even the distance plays no role in the
measurement itself.

ATTENTION!!! The dead path is taken over into the calculation with defining the Zero-Position (IfmSetToZero).
Therefore, IfmSetDeadPath must always be called before IfmSetToZero!

 */
DLLFUNC int32 IfmSetDeadPath(int32 devNumber,int32 channel, int32 deadPath);
/* IfmGetDeadpath returns the active dead path for the given channel in mm
   Because the dead path is set during IfmSetToZero and the dead path can be changed
   in the interferometer (for instance in LaserTracers) the returned value may be
   different from the value set with IfmSetDeadpath

   The dead path is always positive. A negative return value is an error number and indicates an error.

 */

DLLFUNC int32 IfmGetDeadPath(int32 devNumber, int32 channel);
/*
The function IfmSetMeasurementRawValues alike IfmSetMeasurement.
But the filter settings will be ignored here. It means the sampe frequency and the output word rate are equal
*/
//DLLFUNC int32 IfmSetMeasurementRawValues(int32 devNumber,unsigned int32 measurementFlags, int32 outputWordRate);

/*
The command IfmSetMeasurement is for the setting of measurement parameters like trigger conditions, filtering: on/off,
measuring value and output word rate.
For the settings of measurementFlags see siosifmdef.h
*/
DLLFUNC int32 IfmSetMeasurement(int32 devNumber,uint32 measurementFlags, double outputWordRate);
/*
The function for the erasing of the PC-input buffer
*/
DLLFUNC int32 IfmClearBuffers(int32 devNumber);
/*
The command IfmStart is for the measurement start.
The measurement starts with the actual measurement parameter.
See commands IfmSaveConfigDevice and IfmSetMeasurement for the detailed information.
*/
DLLFUNC int32 IfmStart(int32 devNumber);
/*
The command IfmStop for the measurement stop.
*/
DLLFUNC int32 IfmStop(int32 devNumber);
/*
The function IfmValueCount return the count of values, which are in the input puffer available.
*/
DLLFUNC int32 IfmValueCount(int32 devNumber);
/*
The function IfmGetRecentValues reads out the (count-index-1) mesuring values from the input buffer.
*/
DLLFUNC int32 IfmGetRecentValues(int32 devNumber, int32 index);
/*
The function IfmLengthValue read out the length mesuring values.
It is to use directly after the function IfmGetValues
*/
DLLFUNC double IfmLengthValue(int32 devNumber,int32 channel);
DLLFUNC uint32 IfmStatus(int32 devNumber,int32 channel);
// sets the dead path, the preset values, clears the overlow and beambreak flags
// and clears the interferometer counter
DLLFUNC int32 IfmSetToZero(int32 devNumber,int32 channelMask);
DLLFUNC int32 IfmWasBeamBreak(int32 devNumber,int32 channel);
DLLFUNC int32 IfmWasLaserUnstable(int32 devNumber,int32 channel);
// returns the value of the sensor
DLLFUNC double IfmSensorValue(int32 devNumber, int32 sensor);
// switch Edlen correction off, for example for measurements in vacuum or if you want to make your own correction
DLLFUNC void IfmEnableEdlenCorrection(int32 devNumber, int32 channel, int32 on);
// ask, if Edlen correction is enabled
DLLFUNC int32 IfmIsEdlenEnabled(int32 devNumber,int32 channel);